--- a/config.json.template
+++ b/config.json.template
@@ -2,6 +2,6 @@
   "authkey": "",
   "trigger": "绘图", 
   "model": "kandinsky-2.2", 
-  "model list": "kandinsky-2.2, sdxl, stable-diffusion-2.1, stable-diffusion-1.5, deepfloyd-if, material-diffusion, midjourney",
+  "model list": "kandinsky-2.2, kandinsky-2, sdxl, stable-diffusion-2.1, stable-diffusion-1.5, deepfloyd-if, material-diffusion",
   "n": "1"
 }
